Fix text wrap on mobile on privacy page

--- a/pages/privacy/privacy.module.css
+++ b/pages/privacy/privacy.module.css
@@ -27,3 +27,9 @@
 .privacyBody a:hover {
   color: white;
 }
+
+@media screen and (max-width: 960px) {
+  .privacyBody {
+    width: 90vw;
+  }
+}
